06-apply-call-bind实现-参数解析 arguments

--- a/08_call-apply-bind/index.html
+++ b/08_call-apply-bind/index.html
@@ -10,6 +10,10 @@
     <!-- <script src="./00_call函数调用this绑定情况.js"></script> -->
     <!-- <script src="./01_call函数实现.js"></script> -->
     <!-- <script src="./02_apply函数实现.js"></script> -->
-    <script src="./03_bind函数实现.js"></script>
+    <!-- <script src="./03_bind函数实现.js"></script> -->
+    <!-- <script src="./04_bind函数实现.js"></script> -->
+    <!-- <script src="./05_arguments基本使用.js"></script> -->
+    <!-- <script src="./06_arguments转array.js"></script> -->
+    <script src="./07_箭头函数中没有arguments.js"></script>
   </body>
 </html>
